--- a/main.css
+++ b/main.css
@@ -18,6 +18,7 @@ body {
 h1, h2, h3 {
     text-align: center;
 }
+
 .blue-title {
     color: #0056b3;
     margin-bottom: 5px;
@@ -66,4 +67,9 @@ li {
 
 #footer ul{
     padding: 0 10px;
+}
+
+.home {
+    width: 100%;
+    text-align: center;
 }
